# drf-clean-architecture

./: .env.example  .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml
docker/: Dockerfile  docker-compose.dev.yaml  docker-compose.pro.yaml  docker-compose.test.yaml  docker-compose.yaml
scripts/: start_api.sh
src/infrastructure/server/: asgi.py  celery.py  urls.py  wsgi.py
src/infrastructure/settings/: base.py  config.py  development.py  production.py  test.py
src/interface/controllers/: exceptions.py
