[tool.poetry]
name = "forex"
version = "0.1.0"
description = "Forex rates application"
authors = ["sdediego <sergiodediego@outlook.com>"]
license = "MIT"
packages = []          # <- Add this line to disable project packaging

[tool.poetry.dependencies]
python = "^3.13"

# CORE FRAMEWORK & DATABASE
Django = "5.2.9"
psycopg = { version = "3.3.2", extras = ["binary", "pool"] }
pillow = "12.0.0"
django-redis = "6.0.0"
dj-database-url = "3.0.1"
marshmallow = "4.1.1"
pandas = "2.3.3"

# API, AUTH, & HEADERS
djangorestframework = "3.16.1"
djangorestframework-simplejwt = "5.5.1"
django-cors-headers = "4.9.0"
djangorestframework-jsonapi = { version = "8.1.0", extras = ["django-filter"] }
drf-spectacular = { version = "0.29.0", extras = ["sidecar"] }
drf-standardized-errors = { version = "0.15.0", extras = ["openapi"] }
adrf = "0.1.12"

# CONFIGURATION & UTILITIES
python-decouple = "3.8"
requests = "2.32.5"
django-extensions = "4.1"
django-import-export = { version = "4.3.14", extras = ["all"] }

# ADMIN & UI CUSTOMIZATION
django-jazzmin = "3.0.1"
drf-material = "0.3.4"
django-daisy = "2.0.5"
django-schema-viewer = "0.5.3"

# DEVELOPMENT & DEBUGGING
django-debug-toolbar = "6.1.0"
icecream = "2.1.8"

# DEPLOYMENT & PERFORMANCE
gunicorn = "23.0.0"
uvicorn = "0.38.0"
whitenoise = "6.11.0"

# TASK QUEUE / SCHEDULING
celery = { version = "5.6.0", extras = ["redis", "rabbitmq"] }
flower = "2.0.1"
django-celery-beat = "2.8.1"
django-celery-results = "2.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "2.3.2"
pytest-django = "4.11.1"
factory-boy = "3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
